# value_investing

./: .gitignore  CLAUDE.md
China/: .coverage  .coverage.Zacks-M2-Pro.local.17125.XaRZxShx  .coverage.Zacks-M2-Pro.local.73403.XCAYkplx  .coverage.Zacks-M2-Pro.local.89540.XQNAFAfx  .gitignore  AI_TODO.md  API_DOC.md  FHPS_FILTER_README.md  README.md  TODO.md  claude.ipynb  formatter.md  industry_filter.py  industry_info.csv  logging_example.py  main.py  pyproject.toml  run_fhps_filter.py  stock_analysis.csv  stock_analysis.ipynb  stock_analysis.py  stock_analysis_claude.py  stock_filter.py  stock_filter_claude.md  stock_filter_claude.py  test.ipynb  test1.ipynb  test_fhps_filter.py  test_formatting.py
China/.claude/: settings.local.json
China/data/holding_stocks/: 中银-杨敏靖.json  华泰-杨平旃.json  华泰-沈海纳.json
China/data/industry/: industry_stock_mapping_df-20250909.csv
China/data/market/: stock_zh_a_spot_em_df-20250909.csv
China/data/stocks/: industry_stock_mapping_df-20250714.csv  industry_stock_mapping_df-20250715.csv  industry_stock_mapping_df-20250716.csv  industry_stock_mapping_df-20250717.csv  industry_stock_mapping_df-20250718.csv  industry_stock_mapping_df-20250721.csv  industry_stock_mapping_df-20250722.csv  industry_stock_mapping_df-20250723.csv  industry_stock_mapping_df-20250727.csv  industry_stock_mapping_df-20250728.csv  stock_zh_a_spot_em_df-20250714.csv  stock_zh_a_spot_em_df-20250715.csv  stock_zh_a_spot_em_df-20250716.csv  stock_zh_a_spot_em_df-20250717.csv  stock_zh_a_spot_em_df-20250718.csv  stock_zh_a_spot_em_df-20250721.csv  stock_zh_a_spot_em_df-20250722.csv  stock_zh_a_spot_em_df-20250723.csv  stock_zh_a_spot_em_df-20250727.csv  stock_zh_a_spot_em_df-20250728.csv
China/data/today/: 持股报告-20250722.csv  持股报告-20250723.csv  股票筛选报告-20250716.csv  股票筛选报告-20250721.csv  股票筛选报告-20250722.csv  股票筛选报告-20250723.csv  股票筛选报告-20250725.csv  行业筛选报告-20250725.csv  行业筛选报告-raw-20250716.csv  行业筛选报告-raw-20250723.csv
China/data/watchlist/: 中银-杨敏靖.json  自选股.json
China/data/watchlists/: 中银-杨敏靖.json  华泰-杨平旃.json  华泰-沈海纳.json  自选股.json
China/input/watchlists/: 华泰-沈海纳.json  自选股.json
China/scripts/: __init__.py  run_fhps_caching.py  run_fhps_filter.py  run_watchlist_analyzer.py
China/src/: holding_stock_analyzer.py  industry_filter.py  settings.py  stock_analysis.py  stock_filter.py  test_black.py
China/tests/: conftest.py  test.md  test_logging_demo.py
China/utilities/: get_stock_data.py  tools.py
USA/: commidities.ipynb  google sheet.ipynb  main.py  pyproject.toml  sec.ipynb  stock_filter.ipynb  token.json
(+247 files in other folders)
