[project]
name = "china"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.19",
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lxml>=6.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scipy<1.16.0",
    "seaborn>=0.13.2",
    "tushare>=1.4.21",
    "yfinance>=0.2.65",
]
