[project]
name = "china"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.19",
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lxml>=6.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=13.0.0",
    "scipy<1.16.0",
    "seaborn>=0.13.2",
    "tushare>=1.4.21",
    "yfinance>=0.2.65",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage_html",
    "--asyncio-mode=auto"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
filterwarnings = [
    # Suppress the specific RuntimeWarning about coroutines not being awaited
    # This occurs in tests that mock asyncio.run() where the coroutine is created but not executed
    "ignore::RuntimeWarning:unittest.mock",
    "ignore::RuntimeWarning:rich.*",
    "ignore:coroutine.*was never awaited:RuntimeWarning"
]
