[project]
name = "value-investing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "twelvedata>=1.2.25",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.7.2",
]

[tool.uv.workspace]
members = [
    "China",
]
